# bento

./: .bento-sgrep.yml  .bento-whitelist.yml  .bento.yml  .bentoignore  .gitignore  .gitmessage  .isort.cfg  .mypy.ini  .pre-commit-config.ci.yaml  .pre-commit-config.yaml  BETA_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPING.md  MANIFEST.in  Makefile  PRIVACY.md  Pipfile  README.md  SGREP-README.md  build.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  validate-message.sh
.bento/: archive.json  config.yml
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: semgrep.yml  sgrep.yml
bento/: __init__.py  __main__.py  base_context.py  cli.py  config.py  constants.py  context.py  decorators.py  error.py  fignore.py  five.py  formatter.py  git.py  git_util.py  metrics.py  network.py  orchestrator.py  parse_shebang.py  parser.py  paths.py  renderer.py  result.py  run_cache.py  staged_files_only.py  target_file_manager.py  tool.py  tool_runner.py  util.py  violation.py  xargs.py
bento/commands/: archive.py  autocomplete.py  autorun.py  check.py  disable.py  enable.py  hook.py  init.py  register.py  update_ignores.py
bento/configs/: default.yml
bento/content/: init.py  (+1 more)
stubs/: semantic_version.pyi  tqdm.pyi  venv.pyi
tests/: conftest.py  test_cli.py  test_context.py  test_decorators.py  test_enable_ci.py  test_fignore.py  test_formatter.py  test_results.py  test_run_cache.py  test_tool.py  test_tool_runner.py  util.py
(+171 files in other folders)
